# crispy-guacamole

./: .gitignore  .gitmodules  CMakeLists.txt  README  README.md
data/common/: init.lua
data/compounds/script/: Circular Position.graph.lua  Circular Position.layout.lua  Circular Position.lua  Flip Sprite.graph.lua  Flip Sprite.layout.lua  Flip Sprite.lua  Init Directional Sprite.graph.lua  Init Directional Sprite.layout.lua  Init Directional Sprite.lua  (+5 more)
data/eqs/: eqs.lua
data/scripts/: alert.lua  asseticon.lua  audio.lua  brushposition.lua  building.lua  cameratools.lua  confirm.lua  container.lua  csv.lua  debug.lua  displayfps.lua  drawstats.lua  dump.lua  dumpenv.lua  entitydebug.lua  fade.lua  fog.lua  gamespeed.lua  icons.lua  interfaceconfig.lua  leveltasks.lua  line.lua  list.lua  map.lua  memorysnapshot.lua  menu.lua  path.lua  pathfinding.lua  perlin.lua  preview.lua  procgen.lua  profiler.lua  round.lua  splitline.lua  stats.lua  tabpanel.lua  window.lua
data/shaders/: debugline.frag  debugtext.frag  heightmap.frag  heightmap.vert  renderprogram.frag  renderprogram.vert  sprite.frag  spritebatch.frag  spritebatch.vert  ui.frag  ui.vert
data/tool/: assettypes.lua  init.lua
mods/1x1/: map.gpmap
mods/crispy-guacamole/: factions.lua  leveltasks.lua
mods/menu/: map.gpmap
mods/the-global-scourge/: factions.lua
mods/tutorial1/: map.gpmap
mods/tutorial2/: map.gpmap
mods/tutorial3/: map.gpmap
mods/tutorial4/: map.gpmap
src/: main.cpp
src/game/: game.cpp  game.h
tools/: gm.lua  mkfile.lua  titlize.lua
tools/scripts/: newmap.lua
(+2529 files in other folders)
